import groovy.json.JsonOutput
import groovy.json.JsonSlurper

plugins {
    id 'java-library'
    id 'maven-publish'
    id 'net.neoforged.moddev' version '2.0.140'
    id 'idea'
    id 'org.jetbrains.gradle.plugin.idea-ext' version '1.1.6'
    id 'eclipse'
}

tasks.named('wrapper', Wrapper).configure {
    distributionType = Wrapper.DistributionType.BIN
}

def versionProps = new Properties()
file('version.properties').withInputStream { versionProps.load(it) }

def gradleProps = new Properties()
file('gradle.properties').withInputStream { gradleProps.load(it) }

def currentBuild = versionProps.getProperty('build_number')?.toInteger() ?: 0
def nextBuild = currentBuild + 1
def stage = versionProps.getProperty('stage') ?: ''
def baseVersion = versionProps.getProperty('version')
def newVersion = "${baseVersion}-b${nextBuild}-${stage}"

version = newVersion
ext.version_buildnumber = nextBuild
ext.stage = stage

println "-> build.gradle applying version: $version (build ${nextBuild})"

tasks.withType(Jar).configureEach {
    archiveVersion.set(newVersion)
}

group = 'mctmods.resourcedatapackloader'

java.toolchain.languageVersion = JavaLanguageVersion.of(21)

tasks.withType(Jar).configureEach {
    zip64 = true
}

ext {
    mod_id = gradleProps['mod_id']
    version_minecraft = versionProps['version_mc']
    version_neoforge = versionProps['version_neoforge']
    version_neoforge_min = versionProps['version_neoforge_min']
    version_bp = versionProps.getProperty('version_bp', '[0,)')
    version_curios = versionProps['version_curios']
    version_parchment = versionProps['version_parchment']
    mod_license = gradleProps['mod_license']
    mod_name = gradleProps['mod_name']
    mod_authors = gradleProps['mod_authors']
    mod_description = gradleProps['mod_description']
    mod_url = gradleProps['mod_url']
}

def version_replaces = [
        'version'             : project.version,
        'build_number'        : version_buildnumber,
        'version_mc'          : version_minecraft,
        'version_neoforge'    : version_neoforge,
        'version_neoforge_min': version_neoforge_min,
        'version_bp'          : version_bp,
        'mod_license'         : mod_license,
        'mod_name'            : mod_name,
        'mod_authors'         : mod_authors,
        'mod_description'     : mod_description,
        'mod_url'             : mod_url,
        'stage'               : stage,
]

sourceSets {
    main {
        java { srcDirs = ["$rootDir/src/main/java"] }
        resources { srcDirs = ["$rootDir/src/main/resources"] }
    }
}

processResources {
    duplicatesStrategy = DuplicatesStrategy.FAIL
    inputs.properties(version_replaces)
    filesMatching("META-INF/*.mods.toml") {
        expand version_replaces
    }
    exclude ".cache"
    doLast {
        destinationDir.eachFileRecurse { File file ->
            if (file.file && (file.name.endsWith('.json') || file.name.endsWith('.mcmeta'))) {
                file.setText(JsonOutput.toJson(new JsonSlurper().parse(file, 'UTF-8')))
            }
        }
    }
}

tasks.register('copyModsTomlForIntelliJ', Copy) {
    from processResources.destinationDir
    into "$projectDir/out/production/resources"
    include "META-INF/neoforge.mods.toml"
    dependsOn processResources
}

neoForge {
    version = project.version_neoforge

    parchment {
        mappingsVersion = project.version_parchment
        minecraftVersion = project.version_minecraft
    }

    mods {
        "${mod_id}" {
            sourceSet sourceSets.main
        }
    }

    runs {
        client {
            client()
            programArguments.addAll '--username', 'tgstyle', '--width', '1920', '--height', '1080'
            jvmArgument("-Djava.library.path=/usr/lib64")
            jvmArgument('-Xmx4G')
            jvmArgument('-XX:StartFlightRecording=maxsize=512M,dumponexit=true,filename=logs/profile.jfr,settings=profile')
            environment 'LD_LIBRARY_PATH', '/usr/lib64'
        }

        server {
            server()
            programArguments.addAll '--nogui'
            jvmArgument('-Xmx4G')
            jvmArgument('-XX:StartFlightRecording=maxsize=512M,dumponexit=true,filename=logs/profile.jfr,settings=profile')
        }

        configureEach {
            gameDirectory = project.file('run')
        }
    }
}

def bpJar = null
def bpDir = file('../MCT-Blast-Plaster-21/build/libs')
def bpJars = bpDir.exists() ? fileTree(bpDir) {
    include '*-dev.jar'
    exclude '**/*-sources.jar'
}.files : []

if (!bpJars.isEmpty()) {
    bpJar = bpJars.sort { a, b -> a.lastModified() <=> b.lastModified() }.last()
    logger.lifecycle("Found Blast Plaster dev JAR: ${bpJar.name}")
} else {
    logger.warn('No Blast Plaster dev JAR found in ../MCT-Blast-Plaster-21/build/libs, build one there first')
}

repositories {
    mavenCentral()
    maven { url = 'https://repo.spongepowered.org/repository/maven-public/' }
    maven { name = 'ParchmentMC' ; url = 'https://ldtteam.jfrog.io/artifactory/parchmentmc-public/' }
    maven { name = 'Curios' ; url = 'https://maven.theillusivec4.top/' ; content { includeGroup 'top.theillusivec4.curios' } }
}

configurations {
    runtimeClasspath.extendsFrom localRuntime
}

dependencies {
    runtimeOnly "top.theillusivec4.curios:curios-neoforge:${version_curios}"
    if (bpJar != null) {
        implementation files(bpJar)
    }
}

def customGradle = rootProject.file('custom.gradle')
if (customGradle.exists()) apply from: customGradle

tasks.register('bumpVersion') {
    def versionPropsFile = layout.projectDirectory.file('version.properties')
    inputs.file(versionPropsFile)
    outputs.upToDateWhen { false }

    doLast {
        def props = new Properties()
        versionPropsFile.asFile.withInputStream { props.load(it) }
        props['build_number'] = nextBuild.toString()
        versionPropsFile.asFile.withOutputStream { props.store(it, null) }
    }
}

tasks.register('sourcesJar', Jar) {
    dependsOn classes
    archiveClassifier = 'sources'
    from sourceSets.main.allSource
}

artifacts {
    archives sourcesJar
}

tasks.register('optimizePng') {
    def pngPatterns = ["**/*.png"]
    def resourceDirs = sourceSets.main.resources.srcDirs
    def pngFiles = resourceDirs.collectMany { dir -> fileTree(dir: dir, includes: pngPatterns).files as List }
    def execOps = project.services.get(ExecOperations)
    doLast {
        pngFiles.each { File file ->
            long size = file.length()
            execOps.exec {
                executable 'optipng'
                args '-q', '-o7', '-zm1-9', '-strip', 'all', file.absolutePath
            }
            long newSize = file.length()
            if (newSize < size) {
                System.out.format("Reduced File size of %s from %d bytes to %d bytes (reduced by %.2f%%)\n",
                        file, size, newSize, ((double) (size - newSize)) / ((double) size) * 100.0)
            }
        }
    }
}

processResources.dependsOn bumpVersion
jar.dependsOn bumpVersion
sourcesJar.dependsOn bumpVersion

tasks.register('genIntellijRunsDummy') {}

jar {
    archiveBaseName.set("MCT-ResourceDataPackLoader-${version_minecraft}")
    archiveClassifier.set('')
}

tasks.withType(JavaCompile).configureEach { options.encoding = 'UTF-8' }

idea { module { downloadSources = true; downloadJavadoc = true } }

publishing {
    publications { register('mavenJava', MavenPublication) { from(components.java as SoftwareComponent) }}
    repositories { maven { url = "file://${project.projectDir}/repo" } }
}

build.dependsOn bumpVersion
